// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PageSection > renders with as correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="">
  <div class="" data-slot="container"></div>
</div>"
`;

exports[`PageSection > renders with body slot correctly 1`] = `
"<section data-orientation="vertical" data-slot="root" class="">
  <div class="" data-slot="container">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <div data-slot="body" class="">Body slot</div>
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</section>"
`;

exports[`PageSection > renders with bottom slot correctly 1`] = `
"<section data-orientation="vertical" data-slot="root" class="">
  <div class="" data-slot="container"></div>Bottom slot
</section>"
`;

exports[`PageSection > renders with class correctly 1`] = `
"<section data-orientation="vertical" data-slot="root" class="absolute">
  <div class="" data-slot="container"></div>
</section>"
`;

exports[`PageSection > renders with default slot correctly 1`] = `
"<section data-orientation="vertical" data-slot="root" class="">
  <div class="" data-slot="container">
    <!--v-if-->Default slot
  </div>
</section>"
`;

exports[`PageSection > renders with description correctly 1`] = `
"<section data-orientation="vertical" data-slot="root" class="">
  <div class="" data-slot="container">
    <div data-slot="wrapper" class="">
      <div data-slot="header" class="">
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <div data-slot="description" class="">Description</div>
      </div>
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</section>"
`;

exports[`PageSection > renders with description slot correctly 1`] = `
"<section data-orientation="vertical" data-slot="root" class="">
  <div class="" data-slot="container">
    <div data-slot="wrapper" class="">
      <div data-slot="header" class="">
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <div data-slot="description" class="">Description slot</div>
      </div>
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</section>"
`;

exports[`PageSection > renders with features and description correctly 1`] = `
"<section data-orientation="vertical" data-slot="root" class="">
  <div class="" data-slot="container">
    <div data-slot="wrapper" class="">
      <div data-slot="header" class="">
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <div data-slot="description" class="">Description</div>
      </div>
      <div data-slot="body" class="">
        <ul data-slot="features" class="">
          <li data-orientation="horizontal" data-slot="root" class="">
            <div data-slot="leading" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg></div>
            <div data-slot="wrapper" class="">
              <!--v-if-->
              <div data-slot="title" class="">Title</div>
              <div data-slot="description" class="">Description</div>
            </div>
          </li>
        </ul>
      </div>
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</section>"
`;

exports[`PageSection > renders with features and title correctly 1`] = `
"<section data-orientation="vertical" data-slot="root" class="">
  <div class="" data-slot="container">
    <div data-slot="wrapper" class="">
      <div data-slot="header" class="">
        <!--v-if-->
        <!--v-if-->
        <h2 data-slot="title" class="">Title</h2>
        <!--v-if-->
      </div>
      <div data-slot="body" class="">
        <ul data-slot="features" class="">
          <li data-orientation="horizontal" data-slot="root" class="">
            <div data-slot="leading" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg></div>
            <div data-slot="wrapper" class="">
              <!--v-if-->
              <div data-slot="title" class="">Title</div>
              <div data-slot="description" class="">Description</div>
            </div>
          </li>
        </ul>
      </div>
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</section>"
`;

exports[`PageSection > renders with features correctly 1`] = `
"<section data-orientation="vertical" data-slot="root" class="">
  <div class="" data-slot="container">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <div data-slot="body" class="">
        <ul data-slot="features" class="">
          <li data-orientation="horizontal" data-slot="root" class="">
            <div data-slot="leading" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg></div>
            <div data-slot="wrapper" class="">
              <!--v-if-->
              <div data-slot="title" class="">Title</div>
              <div data-slot="description" class="">Description</div>
            </div>
          </li>
        </ul>
      </div>
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</section>"
`;

exports[`PageSection > renders with features slot correctly 1`] = `
"<section data-orientation="vertical" data-slot="root" class="">
  <div class="" data-slot="container">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <div data-slot="body" class="">
        <ul data-slot="features" class="">Features slot</ul>
      </div>
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</section>"
`;

exports[`PageSection > renders with footer slot correctly 1`] = `
"<section data-orientation="vertical" data-slot="root" class="">
  <div class="" data-slot="container">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <!--v-if-->
      <div data-slot="footer" class="">Footer slot</div>
    </div>
    <!--v-if-->
  </div>
</section>"
`;

exports[`PageSection > renders with header slot correctly 1`] = `
"<section data-orientation="vertical" data-slot="root" class="">
  <div class="" data-slot="container">
    <div data-slot="wrapper" class="">
      <div data-slot="header" class="">Header slot</div>
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</section>"
`;

exports[`PageSection > renders with headline correctly 1`] = `
"<section data-orientation="vertical" data-slot="root" class="">
  <div class="" data-slot="container">
    <div data-slot="wrapper" class="">
      <div data-slot="header" class="">
        <!--v-if-->
        <div data-slot="headline" class="">Headline</div>
        <!--v-if-->
        <!--v-if-->
      </div>
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</section>"
`;

exports[`PageSection > renders with headline slot correctly 1`] = `
"<section data-orientation="vertical" data-slot="root" class="">
  <div class="" data-slot="container">
    <div data-slot="wrapper" class="">
      <div data-slot="header" class="">
        <!--v-if-->
        <div data-slot="headline" class="">Headline slot</div>
        <!--v-if-->
        <!--v-if-->
      </div>
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</section>"
`;

exports[`PageSection > renders with icon correctly 1`] = `
"<section data-orientation="vertical" data-slot="root" class="">
  <div class="" data-slot="container">
    <div data-slot="wrapper" class="">
      <div data-slot="header" class="">
        <div data-slot="leading" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg></div>
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
      </div>
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</section>"
`;

exports[`PageSection > renders with leading slot correctly 1`] = `
"<section data-orientation="vertical" data-slot="root" class="">
  <div class="" data-slot="container">
    <div data-slot="wrapper" class="">
      <div data-slot="header" class="">
        <div data-slot="leading" class="">Leading slot</div>
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
      </div>
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</section>"
`;

exports[`PageSection > renders with links and features correctly 1`] = `
"<section data-orientation="vertical" data-slot="root" class="">
  <div class="" data-slot="container">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <div data-slot="body" class="">
        <ul data-slot="features" class="">
          <li data-orientation="horizontal" data-slot="root" class="">
            <div data-slot="leading" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg></div>
            <div data-slot="wrapper" class="">
              <!--v-if-->
              <div data-slot="title" class="">Title</div>
              <div data-slot="description" class="">Description</div>
            </div>
          </li>
        </ul>
      </div>
      <div data-slot="footer" class="">
        <div data-slot="links" class=""><button type="button" data-slot="base" class="">
            <!--v-if--><span data-slot="label" class="">Get started</span>
            <!--v-if-->
          </button></div>
      </div>
    </div>
    <!--v-if-->
  </div>
</section>"
`;

exports[`PageSection > renders with links correctly 1`] = `
"<section data-orientation="vertical" data-slot="root" class="">
  <div class="" data-slot="container">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <!--v-if-->
      <div data-slot="footer" class="">
        <div data-slot="links" class=""><button type="button" data-slot="base" class="">
            <!--v-if--><span data-slot="label" class="">Get started</span>
            <!--v-if-->
          </button></div>
      </div>
    </div>
    <!--v-if-->
  </div>
</section>"
`;

exports[`PageSection > renders with links slot correctly 1`] = `
"<section data-orientation="vertical" data-slot="root" class="">
  <div class="" data-slot="container">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <!--v-if-->
      <div data-slot="footer" class="">
        <div data-slot="links" class="">Links slot</div>
      </div>
    </div>
    <!--v-if-->
  </div>
</section>"
`;

exports[`PageSection > renders with orientation horizontal correctly 1`] = `
"<section data-orientation="horizontal" data-slot="root" class="">
  <div class="" data-slot="container">
    <!--v-if-->
    <div class="hidden lg:block"></div>
  </div>
</section>"
`;

exports[`PageSection > renders with orientation horizontal features correctly 1`] = `
"<section data-orientation="horizontal" data-slot="root" class="">
  <div class="" data-slot="container">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <div data-slot="body" class="">
        <ul data-slot="features" class="">
          <li data-orientation="horizontal" data-slot="root" class="">
            <div data-slot="leading" class=""><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" data-slot="leadingIcon" class=""></svg></div>
            <div data-slot="wrapper" class="">
              <!--v-if-->
              <div data-slot="title" class="">Title</div>
              <div data-slot="description" class="">Description</div>
            </div>
          </li>
        </ul>
      </div>
      <!--v-if-->
    </div>
    <div class="hidden lg:block"></div>
  </div>
</section>"
`;

exports[`PageSection > renders with orientation horizontal links correctly 1`] = `
"<section data-orientation="horizontal" data-slot="root" class="">
  <div class="" data-slot="container">
    <div data-slot="wrapper" class="">
      <!--v-if-->
      <!--v-if-->
      <div data-slot="footer" class="">
        <div data-slot="links" class=""><button type="button" data-slot="base" class="">
            <!--v-if--><span data-slot="label" class="">Get started</span>
            <!--v-if-->
          </button></div>
      </div>
    </div>
    <div class="hidden lg:block"></div>
  </div>
</section>"
`;

exports[`PageSection > renders with orientation horizontal reverse correctly 1`] = `
"<section data-orientation="horizontal" data-slot="root" class="">
  <div class="" data-slot="container">
    <!--v-if-->
    <div class="hidden lg:block"></div>
  </div>
</section>"
`;

exports[`PageSection > renders with reverse correctly 1`] = `
"<section data-orientation="vertical" data-slot="root" class="">
  <div class="" data-slot="container"></div>
</section>"
`;

exports[`PageSection > renders with title correctly 1`] = `
"<section data-orientation="vertical" data-slot="root" class="">
  <div class="" data-slot="container">
    <div data-slot="wrapper" class="">
      <div data-slot="header" class="">
        <!--v-if-->
        <!--v-if-->
        <h2 data-slot="title" class="">Title</h2>
        <!--v-if-->
      </div>
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</section>"
`;

exports[`PageSection > renders with title slot correctly 1`] = `
"<section data-orientation="vertical" data-slot="root" class="">
  <div class="" data-slot="container">
    <div data-slot="wrapper" class="">
      <div data-slot="header" class="">
        <!--v-if-->
        <!--v-if-->
        <h2 data-slot="title" class="">Title slot</h2>
        <!--v-if-->
      </div>
      <!--v-if-->
      <!--v-if-->
    </div>
    <!--v-if-->
  </div>
</section>"
`;

exports[`PageSection > renders with top slot correctly 1`] = `
"<section data-orientation="vertical" data-slot="root" class="">Top slot<div class="" data-slot="container"></div>
</section>"
`;

exports[`PageSection > renders with ui correctly 1`] = `
"<section data-orientation="vertical" data-slot="root" class="">
  <div class="max-w-5xl" data-slot="container"></div>
</section>"
`;
